--- a/client/src/components/Resources/Resources.scss
+++ b/client/src/components/Resources/Resources.scss
@@ -22,7 +22,6 @@ a:hover {
   transition: font-size 0.2s ease-in-out;
 }
 .resources__section {
-  z-index: 2;
   position: relative;
   background-color: #1b2021;
   z-index: -2;
