--- a/client/src/components/SheltersMap/SheltersMap.scss
+++ b/client/src/components/SheltersMap/SheltersMap.scss
@@ -40,6 +40,8 @@
     animation: fadeIn 0.5s ease-out forwards;
     overflow: none;
     height: 100%;
+    width: 100%;
+
     display: flex;
     flex-direction: row;
     background-color: #212d40;
@@ -101,14 +103,14 @@
   &__div-left {
     // height: 3rem;
     animation: fadeIn 0.5s ease-out forwards;
-    width: 10rem;
+    width: 100%;
     align-self: center;
     // margin: 0.7rem;
   }
 
   &__div-right {
     min-height: auto;
-    width: 10rem;
+    width: 100%;
     height: auto;
     animation: fadeIn 0.5s ease-out forwards;
   }
@@ -140,11 +142,12 @@
   color: white;
   background-color: #232f27;
   cursor: pointer;
-  width: 100%;
   text-align: -webkit-center;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width: 100%;
+  width: -webkit-fill-available;
 
   &:hover {
     background-color: white;
